--- a/info.yml
+++ b/info.yml
@@ -4,7 +4,7 @@ project:
   teamId: '123'
   identities:
     pivotal: 'https://www.pivotaltracker.com/n/projects/2682705'
-    heroku: ''
+    heroku: 'https://fernanda-pisconte.herokuapp.com/'
   members:
     member1:
       name: 'Governify'
