--- a/info.yml
+++ b/info.yml
@@ -1,6 +1,6 @@
 project:
-  name: 'Golden Flow Showcase Project'
-  owner: 'governify'
+  name: 'Testing chips 10.5'
+  owner: 'fernandapisconte'
   teamId: '123'
   identities:
     pivotal: 'https://www.pivotaltracker.com/n/projects/2682705'
@@ -12,3 +12,9 @@ project:
       githubUsername: 'governifyauditor'
       pivotalUsername: 'governifyauditor'
       herokuEmail: 'governify.auditor@gmail.com'
+    member2:
+      name: 'Fernanda'
+      surname: 'Pisconte'
+      githubUsername: 'fp456'
+      pivotalUsername: 'fernandapisconte'
+      herokuEmail: 'fpisconte@berkeley.edu'	
