--- a/info.yml
+++ b/info.yml
@@ -1,20 +1,21 @@
 project:
   name: 'Testing chips 10.5'
-  owner: 'fernandapisconte'
+  owner: fernandapisconte
   teamId: '123'
   identities:
     pivotal: 'https://www.pivotaltracker.com/n/projects/2682705'
     heroku: 'https://fa23-00-3575703f9b3a.herokuapp.com/'
+  notifications: {}
   members:
     member1:
-      name: 'Governify'
-      surname: 'Auditor' 
-      githubUsername: 'governifyauditor'
-      pivotalUsername: 'governifyauditor'
-      herokuEmail: 'governify.auditor@gmail.com'
+      name: Governify
+      surname: Auditor
+      githubUsername: governifyauditor
+      pivotalUsername: governifyauditor
+      herokuEmail: governify.auditor@gmail.com
     member2:
-      name: 'Fernanda'
-      surname: 'Pisconte'
-      githubUsername: 'fp456'
-      pivotalUsername: 'fernandapisconte'
-      herokuEmail: 'fpisconte@berkeley.edu'	
+      name: Fernanda
+      surname: Pisconte
+      githubUsername: fp456
+      pivotalUsername: fernandapisconte
+      herokuEmail: fpisconte@berkeley.edu
